Fixed the new way to apply the firefox fix for textfields. It was failing when the textfield not visible from the beggining

--- a/frameworks/foundation/english.lproj/text_field.css
+++ b/frameworks/foundation/english.lproj/text_field.css
@@ -83,9 +83,9 @@
   	line-height:1.8em;
 }
 
-.mozilla .sc-text-field-view input {
-  	top: 3px;
-}
+/*.mozilla .sc-text-field-view input {
+    top: 3px;
+}*/
 
 .sc-text-field-view textarea {
   position: absolute;
